/*
Copyright 2021 The tKeel Authors.
Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

        http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/

syntax = "proto3";

package io.tkeel.plugin.api.repo.v1;

option go_package = "github.com/tkeel-io/tkeel/api/repo/v1;v1";
option java_multiple_files = true;
option java_package = "io.tkeel.plugin.api.repo.v1";
option java_outer_classname = "OpenapiProtoV1";

// @plugins=protoc-gen-go-errors
// 错误
enum Error {
  // @msg=未知类型
  // @code=UNKNOWN
  ERR_UNKNOWN = 0;
  // @msg=找不到REPO
  // @code=NOT_FOUND
  ERR_REPO_NOT_FOUND = 1;
  // @msg=获取REPO列表数据出错
  // @code=INTERNAL
  ERR_LIST_PLUGIN = 2;
  // @msg=请求参数无效
  // @code=INVALID_ARGUMENT
  ERR_INVALID_ARGUMENT = 3;
  // @msg=请求后端存储错误
  // @code=INTERNAL
  ERR_INTERNAL_STORE = 4;
  // @msg=内部错误
  // @code=INTERNAL
  ERR_INTERNAL_ERROR = 5;
  // @msg=REPO已存在
  // @code=INVALID_ARGUMENT
  ERR_REPO_EXIST = 6;
  // @msg=INSTALLER不存在
  // @code=NOT_FOUND
  ERR_INSTALLER_NOT_FOUND = 7;
}